JSA-27/07/2018 Control de sesion
Variable de Session controldada 
Encriptacion de Login (mejora)

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -108,7 +108,7 @@
                 <a href="javascript:void(0);" class="menu-sm"><i class="zmdi zmdi-swap"></i></a>       
                 <a href="javascript:void(0);" class="fullscreen" data-provide="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
                 <a href="javascript:void(0);" class="js-right-sidebar"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a>
-                <a href="sign-in.html" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
+                <a href="Login.aspx" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
             </li>
         </ul>
     </aside>
