--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -12,6 +12,10 @@
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/morrisjs/morris.css" />
 <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
+    <!-- Bootstrap Material Datetime Picker Css -->
+<link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
+    <!-- Bootstrap Select Css -->
+<link href="assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
@@ -463,7 +467,7 @@
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span>Compras</span> </a>
                         <ul class="ml-menu">
                             <li><a href="Compras.aspx">Requisición</a></li>
-                            <li><a href="chat.html">Chat</a></li>
+                            <li><a href="chat.html">Oden de Compra</a></li>
                             <li><a href="events.html">Calendar</a></li>
                             <li><a href="file-dashboard.html">File Manager</a></li>
                             <li><a href="contact.html">Contact list</a></li>
@@ -519,6 +523,8 @@
     <section>
         <asp:contentplaceholder id="ctCompras" runat="server" />
         <asp:contentplaceholder id="ctDashBoard" runat="server" />
+        <asp:contentplaceholder id="ctRequisicion" runat="server" />
+        <asp:contentplaceholder id="ctOrdenCompra" runat="server" />
     </section>
 
     <!-- Main Content -->   
@@ -527,7 +533,7 @@
     <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
     <script src="assets/bundles/vendorscripts.bundle.js"></script>
     <!-- slimscroll, waves Scripts Plugin Js -->
-
+    <script src="assets/plugins/momentjs/moment.js"></script> <!-- Moment Plugin Js --> 
     <script src="assets/bundles/knob.bundle.js"></script>
     <!-- Jquery Knob-->
     <script src="assets/bundles/jvectormap.bundle.js"></script>
@@ -537,9 +543,10 @@
     <script src="assets/bundles/sparkline.bundle.js"></script>
     <!-- sparkline Plugin Js -->
     <script src="assets/bundles/doughnut.bundle.js"></script>
-
+    <script src="assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script> 
     <script src="assets/bundles/mainscripts.bundle.js"></script>
     <script src="assets/js/pages/index.js"></script>
+    <script src="assets/js/pages/forms/basic-form-elements.js"></script> 
 
 </body>
 </html>
