--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -1,24 +1,30 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Web.MainModule.SiteMaster" %>
 
 <!DOCTYPE html>
-
 <html lang="es">
 <head runat="server">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<title>:: GasMundial :: Home</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
-<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/plugins/morrisjs/morris.css" />
-<link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
-    <!-- Bootstrap Material Datetime Picker Css -->
-<link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
-    <!-- Bootstrap Select Css -->
-<link href="assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
-<!-- Custom Css -->
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/color_skins.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <title>:: GasMundial :: Inicio</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Favicon-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Favicon-->
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/plugins/morrisjs/morris.css" />
+    <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css" />
+    <link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
+    <link rel="stylesheet" href="assets/plugins/multi-select/css/multi-select.css">
+    <link rel="stylesheet" href="assets/plugins/jquery-spinner/css/bootstrap-spinner.css">
+    <link href="assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css">
+    <link rel="stylesheet" href="assets/plugins/sweetalert/sweetalert.css" />
+    <link rel="stylesheet" href="assets/plugins/nouislider/nouislider.min.css" />
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/color_skins.css">
 </head>
 <body class="theme-black menu_dark">
     <div class="overlay_menu">
@@ -89,9 +95,11 @@
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12">
                     <div class="social">
-                      
-                        <p>Coded by WrapTheme<br>
-                            Designed by <a href="http://thememakker.com/" target="_blank">thememakker.com</a></p>
+
+                        <p>
+                            Coded by WrapTheme<br>
+                            Designed by <a href="http://thememakker.com/" target="_blank">thememakker.com</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -105,14 +113,14 @@
         <ul class="menu_list">
             <li>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="Dashboard.aspx">
-                    <img src="fonts/Logo GMG.JPG" alt="Alpino"></a>
-            </li>     
-            <li class="power">       
-                <a href="javascript:void(0);" class="menu-sm"><i class="zmdi zmdi-swap"></i></a>       
+                <a class="navbar-brand" href="../../DashBoard/Vista/Dashboard.aspx">
+                    <img src="../../fonts/Logo GMG.JPG" alt="Alpino"></a>
+            </li>
+            <li class="power">
+                <a href="javascript:void(0);" class="menu-sm"><i class="zmdi zmdi-swap"></i></a>
                 <a href="javascript:void(0);" class="fullscreen" data-provide="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
                 <a href="javascript:void(0);" class="js-right-sidebar"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a>
-                <a href="Login.aspx" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
+                <a href="../../Login.aspx" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
             </li>
         </ul>
     </aside>
@@ -147,7 +155,7 @@
                             <li>
                                 <a href="javascript:void(0);">
                                     <div class="media">
-                                        <img class="media-object rounded-circle" src="assets/images/xs/avatar1.jpg" alt="">
+                                        <img class="media-object rounded-circle" src="../../assets/images/xs/avatar1.jpg" alt="">
                                         <div class="media-body">
                                             <span class="name">Alexander <small class="time">35min ago</small></span>
                                             <p class="message">New tasks needs to be done</p>
@@ -158,7 +166,7 @@
                             <li>
                                 <a href="javascript:void(0);">
                                     <div class="media">
-                                        <img class="media-object rounded-circle" src="assets/images/xs/avatar2.jpg" alt="">
+                                        <img class="media-object rounded-circle" src="../../assets/images/xs/avatar2.jpg" alt="">
                                         <div class="media-body">
                                             <span class="name">Grayson <small class="time">1hr ago</small></span>
                                             <p class="message">New tasks needs to be done</p>
@@ -169,7 +177,7 @@
                             <li>
                                 <a href="javascript:void(0);">
                                     <div class="media">
-                                        <img class="media-object rounded-circle" src="assets/images/xs/avatar3.jpg" alt="">
+                                        <img class="media-object rounded-circle" src="../../assets/images/xs/avatar3.jpg" alt="">
                                         <div class="media-body">
                                             <span class="name">Sophia <small class="time">31min ago</small></span>
                                             <p class="message">New tasks needs to be done</p>
@@ -236,11 +244,11 @@
                             <ul class="list-unstyled team-info">
                                 <li class="m-r-15"><small class="text-muted">Team</small></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar2.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar2.jpg" alt="Avatar"></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar3.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar3.jpg" alt="Avatar"></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar4.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar4.jpg" alt="Avatar"></li>
                             </ul>
                         </a>
                     </div>
@@ -253,9 +261,9 @@
                             <ul class="list-unstyled team-info">
                                 <li class="m-r-15"><small class="text-muted">Team</small></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar6.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar6.jpg" alt="Avatar"></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar7.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar7.jpg" alt="Avatar"></li>
                             </ul>
                         </a>
                     </div>
@@ -268,9 +276,9 @@
                             <ul class="list-unstyled team-info">
                                 <li class="m-r-15"><small class="text-muted">Team</small></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar8.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar8.jpg" alt="Avatar"></li>
                                 <li>
-                                    <img src="assets/images/xs/avatar9.jpg" alt="Avatar"></li>
+                                    <img src="../../assets/images/xs/avatar9.jpg" alt="Avatar"></li>
                             </ul>
                         </a>
                     </div>
@@ -454,25 +462,29 @@
                         <div class="user-info m-b-20">
                             <div class="image">
                                 <a href="profile.html">
-                                    <img src="fonts/Logo GMG.JPG" alt="User"></a>
+                                    <img src="../../fonts/Logo GMG.JPG" alt="User"></a>
                             </div>
                             <div class="detail">
-                                <h6><asp:Label runat="server" ID="lblNombre" Text="Michael" /> </h6>
-                                <p class="m-b-0"><asp:Label runat="server" ID="lblUsuario" Text="-----"></asp:Label></p>                              
+                                <h6>
+                                    <asp:Label runat="server" ID="lblNombre" Text="Michael" />
+                                </h6>
+                                <p class="m-b-0">
+                                    <asp:Label runat="server" ID="lblUsuario" Text="-----"></asp:Label>
+                                </p>
                             </div>
                         </div>
                     </li>
-                    
-                    <li class="active open"><a href="Dashboard.aspx"><i class="zmdi zmdi-home"></i><span>Menu</span></a></li>
+
+                    <li class="active open"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i><span>Menu</span></a></li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span>Compras</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="Compras.aspx">Requisición</a></li>
-                            <li><a href="chat.html">Oden de Compra</a></li>
-                            <li><a href="events.html">Calendar</a></li>
+                            <li><a href="../../Compras/Vistas/Compras.aspx">Requisición</a></li>
+                            <li><a href="../../OrdenCompra/Vistas/OrdenCompra.aspx">Oden de Compra</a></li>
+                         <%--   <li><a href="events.html">Calendar</a></li>
                             <li><a href="file-dashboard.html">File Manager</a></li>
                             <li><a href="contact.html">Contact list</a></li>
                             <li><a href="blog-dashboard.html">Blog</a></li>
-                            <li><a href="app-ticket.html">Support Ticket</a></li>
+                            <li><a href="app-ticket.html">Support Ticket</a></li>--%>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-swap-alt"></i><span>Ventas</span> </a>
@@ -493,7 +505,7 @@
                             <li><a href="tabs.html">Tabs</a></li>
                             <li><a href="waves.html">Waves</a></li>
                         </ul>
-                    </li>                    
+                    </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
                         <ul class="ml-menu">
                             <li><a href="basic-form-elements.html">Basic Elements</a></li>
@@ -515,38 +527,44 @@
                             <li><a href="table-color.html">Tables Color</a></li>
                             <li><a href="table-filter.html">Tables Filter</a></li>
                         </ul>
-                    </li>  
+                    </li>
                 </ul>
             </div>
         </div>
     </aside>
     <section>
-        <asp:contentplaceholder id="ctCompras" runat="server" />
-        <asp:contentplaceholder id="ctDashBoard" runat="server" />
-        <asp:contentplaceholder id="ctRequisicion" runat="server" />
-        <asp:contentplaceholder id="ctOrdenCompra" runat="server" />
+        <asp:ContentPlaceHolder ID="ctCompras" runat="server" />
+        <asp:ContentPlaceHolder ID="ctDashBoard" runat="server" />
+        <asp:ContentPlaceHolder ID="ctRequisicion" runat="server" />
+        <asp:ContentPlaceHolder ID="ctOrdenCompra" runat="server" />
     </section>
-
-    <!-- Main Content -->   
-    <!-- Jquery Core Js -->
-    <script src="assets/bundles/libscripts.bundle.js"></script>
+    <script src="../../assets/bundles/libscripts.bundle.js"></script>
     <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
-    <script src="assets/bundles/vendorscripts.bundle.js"></script>
+    <script src="../../assets/bundles/vendorscripts.bundle.js"></script>
     <!-- slimscroll, waves Scripts Plugin Js -->
-    <script src="assets/plugins/momentjs/moment.js"></script> <!-- Moment Plugin Js --> 
-    <script src="assets/bundles/knob.bundle.js"></script>
+    <script src="../../assets/plugins/momentjs/moment.js"></script>
+    <!-- Moment Plugin Js -->
+
+    <script src="../../assets/bundles/knob.bundle.js"></script>
     <!-- Jquery Knob-->
-    <script src="assets/bundles/jvectormap.bundle.js"></script>
+    <script src="../../assets/bundles/jvectormap.bundle.js"></script>
     <!-- JVectorMap Plugin Js -->
-    <script src="assets/bundles/morrisscripts.bundle.js"></script>
+    <script src="../../assets/bundles/morrisscripts.bundle.js"></script>
     <!-- Morris Plugin Js -->
-    <script src="assets/bundles/sparkline.bundle.js"></script>
+    <script src="../../assets/bundles/sparkline.bundle.js"></script>
     <!-- sparkline Plugin Js -->
-    <script src="assets/bundles/doughnut.bundle.js"></script>
-    <script src="assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script> 
-    <script src="assets/bundles/mainscripts.bundle.js"></script>
-    <script src="assets/js/pages/index.js"></script>
-    <script src="assets/js/pages/forms/basic-form-elements.js"></script> 
+    <script src="../../assets/bundles/doughnut.bundle.js"></script>
+    <script src="../../assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
+    <script src="../../assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
+    <script src="../../assets/plugins/multi-select/js/jquery.multi-select.js"></script>
+    <script src="../../assets/plugins/bootstrap-select/css/bootstrap-select.css"></script>
+    <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script> 
+
+    <script src="../../assets/bundles/mainscripts.bundle.js"></script>    
+    <script src="../../assets/js/pages/ui/dialogs.js"></script>
+    <script src="../../assets/js/pages/index.js"></script>
+    <script src="../../assets/js/pages/forms/basic-form-elements.js"></script>
+
 
 </body>
 </html>
