--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -386,67 +386,67 @@
                                 <div class="sl-item">
                                     <div class="sl-content">
                                         <div class="text-muted">Just now</div>
-                                        <p>Finished task <a href="" class="text-info">#features 4</a>.</p>
+                                        <p>Finished task <a class="text-info">#features 4</a>.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-info">
                                     <div class="sl-content">
                                         <div class="text-muted">10:30</div>
-                                        <p><a href="">@Jessi</a> retwit your post</p>
+                                        <p><a>@Jessi</a> retwit your post</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-primary">
                                     <div class="sl-content">
                                         <div class="text-muted">12:30</div>
-                                        <p>Call to customer <a href="" class="text-info">Jacob</a> and discuss the detail.</p>
+                                        <p>Call to customer <a class="text-info">Jacob</a> and discuss the detail.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-warning">
                                     <div class="sl-content">
                                         <div class="text-muted">1 days ago</div>
-                                        <p><a href="" class="text-info">Jessi</a> commented your post.</p>
+                                        <p><a class="text-info">Jessi</a> commented your post.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-primary">
                                     <div class="sl-content">
                                         <div class="text-muted">2 days ago</div>
-                                        <p>Call to customer <a href="" class="text-info">Jacob</a> and discuss the detail.</p>
+                                        <p>Call to customer <a  class="text-info">Jacob</a> and discuss the detail.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-primary">
                                     <div class="sl-content">
                                         <div class="text-muted">3 days ago</div>
-                                        <p>Call to customer <a href="" class="text-info">Jacob</a> and discuss the detail.</p>
+                                        <p>Call to customer <a class="text-info">Jacob</a> and discuss the detail.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-warning">
                                     <div class="sl-content">
                                         <div class="text-muted">4 Week ago</div>
-                                        <p><a href="" class="text-info">Jessi</a> commented your post.</p>
+                                        <p><a  class="text-info">Jessi</a> commented your post.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-warning">
                                     <div class="sl-content">
                                         <div class="text-muted">5 days ago</div>
-                                        <p><a href="" class="text-info">Jessi</a> commented your post.</p>
+                                        <p><a class="text-info">Jessi</a> commented your post.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-primary">
                                     <div class="sl-content">
                                         <div class="text-muted">5 Week ago</div>
-                                        <p>Call to customer <a href="" class="text-info">Jacob</a> and discuss the detail.</p>
+                                        <p>Call to customer <a  class="text-info">Jacob</a> and discuss the detail.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-primary">
                                     <div class="sl-content">
                                         <div class="text-muted">3 Week ago</div>
-                                        <p>Call to customer <a href="" class="text-info">Jacob</a> and discuss the detail.</p>
+                                        <p>Call to customer <a  class="text-info">Jacob</a> and discuss the detail.</p>
                                     </div>
                                 </div>
                                 <div class="sl-item b-warning">
                                     <div class="sl-content">
                                         <div class="text-muted">1 Month ago</div>
-                                        <p><a href="" class="text-info">Jessi</a> commented your post.</p>
+                                        <p><a class="text-info">Jessi</a> commented your post.</p>
                                     </div>
                                 </div>
                             </div>
@@ -476,11 +476,11 @@
                     </li>
 
                     <li class="active open"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i><span>Menu</span></a></li>
+                    <li class="active open"><a href="../../Compras/Vistas/Compras.aspx"><i class="zmdi zmdi-home"></i><span>Inventario</span></a></li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span>Compras</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="../../Compras/Vistas/Compras.aspx">Requisición</a></li>
                             <li><a href="../../OrdenCompra/Vistas/OrdenCompra.aspx">Oden de Compra</a></li>
-                         <%--   <li><a href="events.html">Calendar</a></li>
+                            <%--<li><a href="events.html">Calendar</a></li>
                             <li><a href="file-dashboard.html">File Manager</a></li>
                             <li><a href="contact.html">Contact list</a></li>
                             <li><a href="blog-dashboard.html">Blog</a></li>
@@ -489,34 +489,13 @@
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-swap-alt"></i><span>Ventas</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="ui_kit.html">UI KIT</a></li>
-                            <li><a href="alerts.html">Alerts</a></li>
-                            <li><a href="collapse.html">Collapse</a></li>
-                            <li><a href="colors.html">Colors</a></li>
-                            <li><a href="dialogs.html">Dialogs</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="list-group.html">List Group</a></li>
-                            <li><a href="media-object.html">Media Object</a></li>
-                            <li><a href="modals.html">Modals</a></li>
-                            <li><a href="notifications.html">Notifications</a></li>
-                            <li><a href="progressbars.html">Progress Bars</a></li>
-                            <li><a href="range-sliders.html">Range Sliders</a></li>
-                            <li><a href="sortable-nestable.html">Sortable & Nestable</a></li>
-                            <li><a href="tabs.html">Tabs</a></li>
-                            <li><a href="waves.html">Waves</a></li>
+                            <li><a href="ui_kit.html">UI KIT</a></li>                          
                         </ul>
                     </li>
-                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
+                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Almacen</span> </a>
                         <ul class="ml-menu">
                             <li><a href="basic-form-elements.html">Basic Elements</a></li>
-                            <li><a href="advanced-form-elements.html">Advanced Elements</a></li>
-                            <li><a href="form-examples.html">Form Examples</a></li>
-                            <li><a href="form-validation.html">Form Validation</a></li>
-                            <li><a href="form-wizard.html">Form Wizard</a></li>
-                            <li><a href="form-editors.html">Editors</a></li>
-                            <li><a href="form-upload.html">File Upload</a></li>
-                            <li><a href="form-img-cropper.html">Image Cropper</a></li>
-                            <li><a href="form-summernote.html">Summernote</a></li>
+
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
@@ -557,10 +536,10 @@
     <script src="../../assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
     <script src="../../assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
     <script src="../../assets/plugins/multi-select/js/jquery.multi-select.js"></script>
-    <script src="../../assets/plugins/bootstrap-select/css/bootstrap-select.css"></script>
-    <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script> 
+    <%--<script src="../../assets/plugins/bootstrap-select/css/bootstrap-select.css"></script>--%>
+    <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script>
 
-    <script src="../../assets/bundles/mainscripts.bundle.js"></script>    
+    <script src="../../assets/bundles/mainscripts.bundle.js"></script>
     <script src="../../assets/js/pages/ui/dialogs.js"></script>
     <script src="../../assets/js/pages/index.js"></script>
     <script src="../../assets/js/pages/forms/basic-form-elements.js"></script>
