--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -475,10 +475,10 @@
                         </div>
                     </li>
 
-                    <li class="active open"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i><span>Menu</span></a></li>
-                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span>Compras</span> </a>
+                    <li class="menu_dark"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
+                    <li class="menu_dark"><a href="../../Compras/Vistas/Compras.aspx"><i class="material-icons">feedback </i> <span class="icon-name">Requisicion</span> </a></li>
+                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="../../Compras/Vistas/Compras.aspx">Requisición</a></li>
                             <li><a href="../../OrdenCompra/Vistas/OrdenCompra.aspx">Oden de Compra</a></li>
                          <%--   <li><a href="events.html">Calendar</a></li>
                             <li><a href="file-dashboard.html">File Manager</a></li>
@@ -487,36 +487,15 @@
                             <li><a href="app-ticket.html">Support Ticket</a></li>--%>
                         </ul>
                     </li>
-                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-swap-alt"></i><span>Ventas</span> </a>
+                    <li><a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="ui_kit.html">UI KIT</a></li>
-                            <li><a href="alerts.html">Alerts</a></li>
-                            <li><a href="collapse.html">Collapse</a></li>
-                            <li><a href="colors.html">Colors</a></li>
-                            <li><a href="dialogs.html">Dialogs</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="list-group.html">List Group</a></li>
-                            <li><a href="media-object.html">Media Object</a></li>
-                            <li><a href="modals.html">Modals</a></li>
-                            <li><a href="notifications.html">Notifications</a></li>
-                            <li><a href="progressbars.html">Progress Bars</a></li>
-                            <li><a href="range-sliders.html">Range Sliders</a></li>
-                            <li><a href="sortable-nestable.html">Sortable & Nestable</a></li>
-                            <li><a href="tabs.html">Tabs</a></li>
-                            <li><a href="waves.html">Waves</a></li>
+                            <li><a href="ui_kit.html">Ventas</a></li>                           
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="basic-form-elements.html">Basic Elements</a></li>
-                            <li><a href="advanced-form-elements.html">Advanced Elements</a></li>
-                            <li><a href="form-examples.html">Form Examples</a></li>
-                            <li><a href="form-validation.html">Form Validation</a></li>
-                            <li><a href="form-wizard.html">Form Wizard</a></li>
-                            <li><a href="form-editors.html">Editors</a></li>
-                            <li><a href="form-upload.html">File Upload</a></li>
-                            <li><a href="form-img-cropper.html">Image Cropper</a></li>
-                            <li><a href="form-summernote.html">Summernote</a></li>
+                            <li><a href="basic-form-elements.html">Requisiciones</a></li>
+                           
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
