--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -476,11 +476,11 @@
                     </li>
 
                     <li class="menu_dark"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
-                    <li class="menu_dark"><a href="../../Compras/Vistas/Compras.aspx"><i class="material-icons">feedback </i> <span class="icon-name">Requisicion</span> </a></li>
+                    <li class="menu_dark"><a href="../../Compras/Vistas/Compras.aspx"><i class="material-icons">feedback </i><span class="icon-name">Requisicion</span> </a></li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
                             <li><a href="../../OrdenCompra/Vistas/OrdenCompra.aspx">Oden de Compra</a></li>
-                         <%--   <li><a href="events.html">Calendar</a></li>
+                            <%--   <li><a href="events.html">Calendar</a></li>
                             <li><a href="file-dashboard.html">File Manager</a></li>
                             <li><a href="contact.html">Contact list</a></li>
                             <li><a href="blog-dashboard.html">Blog</a></li>
@@ -489,13 +489,13 @@
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                         <ul class="ml-menu">
-                            <li><a href="ui_kit.html">Ventas</a></li>                           
+                            <li><a href="ui_kit.html">Ventas</a></li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
                         <ul class="ml-menu">
                             <li><a href="basic-form-elements.html">Requisiciones</a></li>
-                           
+
                         </ul>
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
@@ -520,10 +520,22 @@
     <script src="../../assets/bundles/libscripts.bundle.js"></script>
     <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
     <script src="../../assets/bundles/vendorscripts.bundle.js"></script>
+
+    <script src="../../assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
+    <script src="assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
+    <!-- Input Mask Plugin Js -->
+    <script src="../../assets/plugins/multi-select/js/jquery.multi-select.js"></script>
+    <script src="assets/plugins/jquery-spinner/js/jquery.spinner.js"></script>
+    <!-- Jquery Spinner Plugin Js -->
+    <script src="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.js"></script>
+    <!-- Bootstrap Tags Input Plugin Js -->
+    <script src="assets/plugins/nouislider/nouislider.js"></script>
+    <!-- noUISlider Plugin Js -->
+    <script src="../../assets/plugins/bootstrap-select/css/bootstrap-select.css"></script>
+
     <!-- slimscroll, waves Scripts Plugin Js -->
     <script src="../../assets/plugins/momentjs/moment.js"></script>
     <!-- Moment Plugin Js -->
-
     <script src="../../assets/bundles/knob.bundle.js"></script>
     <!-- Jquery Knob-->
     <script src="../../assets/bundles/jvectormap.bundle.js"></script>
@@ -534,15 +546,16 @@
     <!-- sparkline Plugin Js -->
     <script src="../../assets/bundles/doughnut.bundle.js"></script>
     <script src="../../assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
-    <script src="../../assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
-    <script src="../../assets/plugins/multi-select/js/jquery.multi-select.js"></script>
-    <script src="../../assets/plugins/bootstrap-select/css/bootstrap-select.css"></script>
-    <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script> 
 
-    <script src="../../assets/bundles/mainscripts.bundle.js"></script>    
+
+
+    <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script>
+
+    <script src="../../assets/bundles/mainscripts.bundle.js"></script>
     <script src="../../assets/js/pages/ui/dialogs.js"></script>
     <script src="../../assets/js/pages/index.js"></script>
     <script src="../../assets/js/pages/forms/basic-form-elements.js"></script>
+    <script src="assets/js/pages/forms/advanced-form-elements.js"></script> 
 
 
 </body>
