CVG - 07/08/2018 Archivos Proyecto Android
Se suben los archivos de los proyectos de Android

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
@@ -85,6 +85,14 @@
                 android:textColor="@color/colorTextLogin"
                 android:textSize="20dp" />
 
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TableRow>
+                    a
+                </TableRow>
+            </TableLayout>
+
 
         </LinearLayout>
 
