--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
@@ -47,4 +47,8 @@
             android:layout_gravity="center"
             android:src="@drawable/right" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3px"
+        android:background="@color/colorButtonLogin"/>
 </LinearLayout>
