--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:padding="5dp"
+            android:padding="@dimen/padding_value"
             android:textSize="30dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:padding="5dp"
+            android:padding="@dimen/padding_value"
             android:textSize="20sp"
             android:textStyle="bold"
             android:text="@string/porcentaje"/>
