--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
@@ -50,15 +50,6 @@
                     android:textColor="@color/colorTextLogin"
                     android:textSize="20dp" />
 
-                <ImageButton
-                    android:id="@+id/imageBtnFecha"
-                    android:src="@drawable/calendar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@color/colorBackgroundLogin"/>
-
             </LinearLayout>
 
             <TextView
@@ -75,7 +66,7 @@
             <TextView
                 android:id="@+id/textViewProovedor"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
@@ -87,99 +78,171 @@
 
             <TableLayout
                 android:id="@+id/tableProductos"
-                android:stretchColumns="0,1,2,3,4,5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:stretchColumns="0,1,2,3,4,5">
+
                 <TableRow
                     android:background="@color/colorPrimary"
                     android:padding="5dp">
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/producto"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:textColor="@color/colorTextButtonLogin" />
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/cantidad"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:text="@string/abr_cantidad"
+                        android:textColor="@color/colorTextButtonLogin" />
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/abr_unidad_medida"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:textColor="@color/colorTextButtonLogin" />
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/precio"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:textColor="@color/colorTextButtonLogin" />
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/porcentaje_desc"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:text="@string/abr_porcentaje_desc"
+                        android:textColor="@color/colorTextButtonLogin" />
+
                     <TextView
+                        style="@style/TabelViewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/importe"
-                        android:textColor="@color/colorTextButtonLogin"/>
+                        android:textColor="@color/colorTextButtonLogin" />
                 </TableRow>
             </TableLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/subtotal"
-                android:textColor="@color/colorTextLogin"
-                android:textSize="20dp" />
+                android:orientation="horizontal"
+                android:paddingRight="10dp">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/subtotal"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
 
-            <TextView
+                <TextView
+                    android:id="@+id/textViewSubtotal"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="$10,000,000"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/iva"
-                android:textColor="@color/colorTextLogin"
-                android:textSize="20dp" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:paddingRight="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/iva"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/textViewIva"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/subtotal"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/total"
-                android:textColor="@color/colorTextLogin"
-                android:textSize="20dp" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:paddingRight="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/total"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/textViewTotal"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/subtotal"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
