--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="android:textSize">30dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="TabelViewText" >
+        <item name="android:textSize">15dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
