CVG - Integracion Web Api Orden de compra

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
 
 
         <LinearLayout
+            android:id="@+id/layout_iniciar"
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
