--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/textViewRuta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
