JSA-10/08/2018 Requisicion revision

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css
@@ -37,7 +37,7 @@
 .dtp .dtp-picker-time > .dtp-select-hour { cursor: pointer; }
 .dtp .dtp-picker-time > .dtp-select-minute { cursor: pointer; }
 
-.dtp .dtp-buttons { padding: 0 1em 1em 1em; text-align: right; }
+.dtp .dtp-buttons { /*padding: 0 1em 1em 1em; text-align: right;*/ }
 
 .dtp.hidden, .dtp .hidden { display: none; }
 .dtp .invisible { visibility: hidden; }
