CVG - 13/08/2018 Integración de EsTrasnporte en webApi

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
@@ -138,6 +138,15 @@
                 </TableRow>
             </TableLayout>
 
+            <TableLayout
+                android:id="@+id/tableProductos2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:stretchColumns="0,1,2,3,4,5">
+            </TableLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
