CVG - 14/08/2018 Aplicacion funcional hasta tomar imagenes

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
@@ -98,4 +98,16 @@
 
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textIndicaciones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/mensaje_foto_papeleta"
+        android:textColor="@color/colorTextLogin"
+        android:textSize="25dp" />
+
 </LinearLayout>
