--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
@@ -25,6 +25,7 @@
         android:textSize="45dp"
         android:textStyle="bold" />
     <TextView
+        android:id="@+id/textViewCapturaText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
