KSH-16/08/2018 Inserción Logo Konsilio
Se integra el logo de Konsilio en el login

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -114,7 +114,7 @@
             <li>
                 <a href="javascript:void(0);" class="bars"></a>
                 <a class="navbar-brand" href="../../DashBoard/Vista/Dashboard.aspx">
-                    <img src="../../fonts/Logo GMG.JPG" alt="Alpino"></a>
+                    <img src="../../fonts/LogoCorpKonsilio183x183.png" alt="Corporativo Konsilio"></a>
             </li>
             <li class="power">
                 <a href="javascript:void(0);" class="menu-sm"><i class="zmdi zmdi-swap"></i></a>
