--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/assets/scss/pages/_authentication.scss
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/assets/scss/pages/_authentication.scss
@@ -21,12 +21,12 @@
     }
 
     &::before{
-        background-image: url('../../assets/images/logo.svg');
+        background-image: url('../../assets/images/LogoCorpKonsilio500x500.png');
         content: '';        
         position: absolute;
         z-index: 1;
         background-repeat: no-repeat;
-        opacity: 0.02;
+        opacity: 0.03;
         width: 100%;
         height: 100%;
     }
