JOTM 29-08-2018 Inicio registro de estaciones de carburación
Inicio iniciales y finales de estaciones de carburación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_datos.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_datos.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LecturaDatosActivity">
+    tools:context=".Activity.LecturaDatosActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,14 +18,16 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/LecturaDatosactivityTitulo"
+                android:id="@+id/TVLecturaDatosactivityTitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:paddingBottom="15dp"
-                android:paddingTop="5dp"
+                android:paddingTop="25dp"
                 android:text="@string/toma_de_lectura_inicial"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/TVLecturaDatosEstacion"
@@ -85,6 +86,7 @@
                 android:background="@color/colorButtonLogin"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
+                android:textSize="18sp"
                 tools:ignore="ObsoleteLayoutParam" />
 
         </LinearLayout>
