--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
@@ -59,14 +59,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:labelFor="@id/ETLecturaP500CantidadLectura"
+                android:labelFor="@id/NPLecturaP500CantidadLectura"
                 android:paddingBottom="10dp"
                 android:paddingTop="15dp"
                 android:text="@string/registra_la_lectura_del_p500_de_la_estaci_n"
                 android:textAlignment="center"
                 android:textSize="18sp" />
 
-            <EditText
+            <!--<EditText
                 android:id="@+id/ETLecturaP500CantidadLectura"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -74,8 +74,26 @@
                 android:layout_marginRight="15dp"
                 android:ems="10"
                 android:inputType="number"
+                android:singleLine="false"
                 android:textAlignment="center"
-                android:textSize="30sp" />
+                android:textSize="30sp" />-->
+            <NumberPicker
+                android:id="@+id/NPLecturaP500CantidadLectura"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_weight="2"
+                android:addStatesFromChildren="false"
+                android:keepScreenOn="false"
+                android:scaleY="1"
+                android:textAlignment="center"
+                android:textSize="60dp"
+                android:theme="@style/NumberPickerText"
+                tools:ignore="ObsoleteLayoutParam,SpUsage">
+
+            </NumberPicker>
 
             <Space
                 android:layout_width="match_parent"
