--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -9,11 +9,12 @@
     </style>
 
     <style name="NumberPickerText" >
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize" tools:ignore="SpUsage">30dp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="TabelViewText" >
         <item name="android:textSize">15dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
 </resources>
