SE agrega presentacion de empresas en nuevo entorno mvc

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -510,7 +510,8 @@
                             <li><a href="../../Catalogos/Vista/CentrosCosto.aspx">Centro de costos</a></li>
                             <li><a href="table-filter.html">Puntos de venta</a></li>
                             <li><a href="table-filter.html">Equipo de transporte</a></li>
-                            <li><a href="../../Catalogos/Vista/Empresas.aspx">Gaseras</a></li>
+                            @*<li><a href="../../Catalogos/Vista/Empresas.aspx">Gaseras</a></li>*@
+                            <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                         </ul>
                     </li>
                 </ul>
